--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "devicetracker",
   "version": "1.0.0",
   "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
