--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "devicetracker",
   "version": "1.0.0",
   "main": "app.js",
-  "engines": {
-    "node": "20.x"
-  },
+  "engines": { "node": "20.x" },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
