--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "devicetracker",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
